Fix Cypress config, test setup, and UI data-testid issues for full E2E test pass

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,8 +1,7 @@
 {
-    "extends": "../tsconfig.json",
-    "compilerOptions": {
-      "types": ["cypress"]
-    },
-    "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
-  }
-  
+  "compilerOptions": {
+    "types": ["cypress"],
+    "noEmit": true
+  },
+  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
+}
