--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,13 +29,7 @@
   },
   "files": [],
   "references": [
-    {
-      "path": "./server"
-    },
-    {
-      "path": "./client"
-    },
-    {
-      "path": "./cypress"
-    }]
+    { "path": "./server" },
+    { "path": "./client" }
+  ]
 }
