--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "cd server && npm run build",
     "seed": "cd server && npm run seed",
     "render-build": "npm install && npm run build",
-    "test": "cypress open",
+    "test": "cypress run --component && cypress run --e2e",
     "cypress": "cypress open --config-file cypress.config.cjs"
   },
   "keywords": [],
